apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'kotlin-android'
android {
    compileSdk 36
// Android 14
    useLibrary 'org.apache.http.legacy'

    defaultConfig {
        applicationId "uk.org.openseizuredetector"
        minSdkVersion 23  // Android 6
        targetSdkVersion 35  // Android 15 = 35
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests {
            includeAndroidResources = true
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    namespace 'uk.org.openseizuredetector'
    buildFeatures {
        viewBinding true
        compose true
    }

    composeOptions {
        kotlinCompilerExtensionVersion '1.5.15'
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
}

dependencies {
    implementation 'androidx.multidex:multidex:2.0.1'
    //implementation files('libs/mpandroidchartlibrary-2-0-7.jar')
    //implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    // V2.1.3 of MPAndroidChart is the most recent version that compiles without modifying
    // how we use ValueFormatter
    // FIXME: Update mainactivity so we can use the latest version.
    implementation 'com.github.PhilJay:MPAndroidChart:v2.1.3'
    implementation 'com.getpebble:pebblekit:4.0.1@aar'
    // Unit testing dependencies
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'com.google.firebase:firebase-auth:22.3.1'
    implementation 'androidx.test:core:1.5.0'
    implementation 'com.google.android.gms:play-services-tflite-java:16.1.0'
    implementation 'com.google.android.gms:play-services-tflite-support:16.1.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    // google play services used for location finding for SMS alerts.
    //implementation 'com.google.android.gms:play-services:+'
    implementation 'com.google.android.gms:play-services-wearable:+'
    implementation 'com.github.wendykierp:JTransforms:3.1'
    implementation 'com.google.android.gms:play-services-location:+'
    //implementation 'com.github.RohitSurwase.UCE-Handler:uce_handler:1.3'
    implementation 'com.android.volley:volley:1.2.1'
    implementation platform('com.google.firebase:firebase-bom:32.7.1')
    implementation 'com.google.firebase:firebase-analytics'
    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
    implementation 'com.google.firebase:firebase-firestore'
    implementation 'androidx.navigation:navigation-fragment:2.7.6'
    implementation 'androidx.navigation:navigation-ui:2.7.6'

    testImplementation 'junit:junit:4.13.2'
    testImplementation "androidx.test:core"
    testImplementation 'org.mockito:mockito-core:5.9.0'
    //testImplementation 'org.hamcrest:hamcrest-library:2.2'
    //testImplementation 'org.robolectric:robolectric:4.7.3'

    //androidTestImplementation 'androidx.test:core:1.1.0'
    //androidTestImplementation 'androidx.test:runner:1.1.1'
    //androidTestImplementation 'androidx.test:rules:1.1.1'
    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
    //androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.1'
    implementation 'com.techyourchance:threadposter:1.0.1'
    implementation 'com.google.android.material:material'
    implementation "com.github.RideBeeline:android-bluetooth-current-time-service:0.1.2"
    implementation 'com.github.weliem:blessed-android:2.5.0'

    implementation platform('androidx.compose:compose-bom:2025.11.01')
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.material3:material3'
    implementation 'androidx.activity:activity-compose' // Needed for ComponentActivity.setContent
    debugImplementation 'androidx.compose.ui:ui-tooling'
    implementation 'androidx.compose.ui:ui-tooling-preview'
}

repositories {
    mavenCentral()
    maven { url "https://oss.sonatype.org/content/groups/public/" }
}
